--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="Awaiken Theme">
 	<!-- Page Title -->
-	<title>Launch - Under Maintenance HTML Template</title>
+	<title>Virtual Service Reps - Connecting Talent Virtually Everywhere!</title>
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
 	<!-- Bootstrap css -->
